--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.seclerp.msbuildrunner</id>
-    <name>msbuild-runner Template</name>
+    <name>Msbuild-Runner Template</name>
     <vendor>JetBrains</vendor>
 
     <depends>com.intellij.modules.rider</depends>
@@ -10,6 +10,8 @@
 
     <extensions defaultExtensionNs="com.intellij">
         <toolWindow factoryClass="com.github.seclerp.msbuildrunner.toolWindow.MyToolWindowFactory" id="MyToolWindow"/>
+        <configurationType
+                implementation="com.github.seclerp.msbuildrunner.MSBuildConfigurationType"/>
     </extensions>
 
     <applicationListeners>
