Backend: Add MSBuild Task C# template

--- a/src/dotnet/Msbuild.Runner/Msbuild.Runner.csproj
+++ b/src/dotnet/Msbuild.Runner/Msbuild.Runner.csproj
@@ -14,4 +14,8 @@
         <PackageReference Include="JetBrains.Rider.RdBackend.Common"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <EmbeddedResource Include="FileTemplates\MSBuildTask.xml" />
+    </ItemGroup>
+
 </Project>
