Templates: Add more items template, add project template

--- a/src/dotnet/Msbuild.Runner/Msbuild.Runner.csproj
+++ b/src/dotnet/Msbuild.Runner/Msbuild.Runner.csproj
@@ -15,7 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <EmbeddedResource Include="FileTemplates\MSBuildTask.xml" />
+      <EmbeddedResource Include="FileTemplates\MSBuildFileTemplates.xml" />
     </ItemGroup>
 
 </Project>
