Refactor: Synchronize naming across codebase

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.seclerp.msbuildrunner
-pluginName = msbuild-runner
-dotnetPluginNamespace = Msbuild.Runner
+pluginId = me.seclerp.msbuild.devkit
+pluginName = MSBuild DevKit
+pluginNamespace = MSBuild.DevKit
 dotnetBuildConfiguration = Debug
-pluginRepositoryUrl = https://github.com/seclerp/rider-plugin-template
+pluginRepositoryUrl = https://github.com/seclerp/rider-msbuild-devkit
 # SemVer format -> https://semver.org
 pluginVersion = 1.0.0
 
