--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ pluginNamespace = MSBuild.DevKit
 dotnetBuildConfiguration = Debug
 pluginRepositoryUrl = https://github.com/seclerp/rider-msbuild-devkit
 # SemVer format -> https://semver.org
-pluginVersion = 1.1.0
+pluginVersion = 1.1.1
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 241
@@ -18,7 +18,7 @@ platformType = RD
 #   Release:  2020.2
 #   Nightly:  2020.3-SNAPSHOT
 #   EAP:      2020.3-EAP2-SNAPSHOT
-platformVersion = 2024.1-EAP9-SNAPSHOT
+platformVersion = 2024.1-RC1-SNAPSHOT
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
