Fix weird memory issues

--- a/gradle.properties
+++ b/gradle.properties
@@ -29,6 +29,7 @@ gradleVersion = 8.3
 
 # Opt-out flag for bundling Kotlin standard library -> https://jb.gg/intellij-platform-kotlin-stdlib
 kotlin.stdlib.default.dependency = false
+kotlin.daemon.jvmargs=-Xmx4000m
 
 # :rdgen and granular Rider .NET SDK related tasks doesn't support configuration cache
 # org.gradle.configuration-cache = true
