--- a/src/dotnet/Directory.Packages.props
+++ b/src/dotnet/Directory.Packages.props
@@ -1,19 +1,19 @@
 <Project>
-    <PropertyGroup>
-        <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-    </PropertyGroup>
-
-    <!-- Rider SDK packages versions -->
-    <Import Project="RiderSdk.PackageVersions.Generated.props"/>
-
-    <!-- Test-only -->
-    <ItemGroup>
-        <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.3"/>
-        <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.3.2"/>
-        <PackageVersion Include="NUnit" Version="3.13.3" />
-        <PackageVersion Include="NUnit3TestAdapter" Version="4.4.2" />
-        <PackageVersion Include="NUnit.Analyzers" Version="3.6.1" />
-        <PackageVersion Include="coverlet.collector" Version="3.1.2"/>
-    </ItemGroup>
-
+  <PropertyGroup>
+    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+  </PropertyGroup>
+  <!-- Rider SDK packages versions -->
+  <Import Project="RiderSdk.PackageVersions.Generated.props" />
+  <!-- Test-only -->
+  <ItemGroup>
+    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.3" />
+    <PackageVersion Include="Microsoft.Build" Version="17.8.3" />
+    <PackageVersion Include="Microsoft.Build.Locator" Version="1.7.8" />
+    <PackageVersion Include="Microsoft.Build.Utilities.Core" Version="17.8.3" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
+    <PackageVersion Include="NUnit" Version="3.13.3" />
+    <PackageVersion Include="NUnit3TestAdapter" Version="4.4.2" />
+    <PackageVersion Include="NUnit.Analyzers" Version="3.6.1" />
+    <PackageVersion Include="coverlet.collector" Version="3.1.2" />
+  </ItemGroup>
 </Project>
