--- a/src/main/resources/messages/MSBuildDevKitBundle.properties
+++ b/src/main/resources/messages/MSBuildDevKitBundle.properties
@@ -1,3 +1,4 @@
-projectService=Project service: {0}
-randomLabel=The random number is: {0}
-shuffle=Shuffle
+msbuild.interactive.toolwindow.name=MSBuild Interactive
+msbuild.interactive.tab.name=MSBuild Interactive
+msbuild.language.name=MSBuild
+msbuild.language.filename=MSBuild File
