--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,8 @@ pluginRepositoryUrl = https://github.com/seclerp/rider-msbuild-devkit
 pluginVersion = 1.1.1
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 241
-pluginUntilBuild = 241.*
+pluginSinceBuild = 242
+pluginUntilBuild = 242.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType = RD
@@ -18,11 +18,7 @@ platformType = RD
 #   Release:  2020.2
 #   Nightly:  2020.3-SNAPSHOT
 #   EAP:      2020.3-EAP2-SNAPSHOT
-platformVersion = 2024.1-RC1-SNAPSHOT
-
-# Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
-# Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins =
+platformVersion = 2024.2-SNAPSHOT
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 8.3
@@ -38,3 +34,6 @@ org.gradle.caching = true
 
 # Enable Gradle Kotlin DSL Lazy Property Assignment -> https://docs.gradle.org/current/userguide/kotlin_dsl.html#kotdsl:assignment
 systemProp.org.gradle.unsafe.kotlin.assignment = true
+
+# To use IDE builds from Maven repo rather than official installers.
+org.jetbrains.intellij.platform.buildFeature.useBinaryReleases=false
