--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,69 +98,69 @@ jobs:
           path: ./build/distributions/content/*/*
 
   # Run tests and upload a code coverage report
-  test:
-    name: Test
-    needs: [ build ]
-    runs-on: ubuntu-latest
-    steps:
-
-      # Check out current repository
-      - name: Fetch Sources
-        uses: actions/checkout@v4
-
-      # Set up Java environment for the next steps
-      - name: Setup Java
-        uses: actions/setup-java@v3
-        with:
-          distribution: zulu
-          java-version: 17
-
-      # Setup Gradle
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          gradle-home-cache-cleanup: true
-
-      # Setup .NET environment for backend plugin build
-      - name: Setup .NET SDK
-        uses: actions/setup-dotnet@v3
-        with:
-          global-json-file: src/dotnet/global.json
-
-      # Run tests
-      - name: Run Frontend Tests
-        run: ./gradlew check
-
-      # Collect Tests Result of failed tests
-      - name: Collect Frontend Tests Result
-        if: ${{ failure() }}
-        uses: actions/upload-artifact@v3
-        with:
-          name: tests-result
-          path: ${{ github.workspace }}/build/reports/tests
-      - name: Collect Frontend Tests Logs
-        uses: actions/upload-artifact@v3
-        with:
-          name: tests-logs
-          path: ${{ github.workspace }}/build/idea-sandbox/system-test/log
-        if: ${{ always() }}
-
-      # Upload the Kover report to CodeCov
-      - name: Upload Code Coverage Report
-        uses: codecov/codecov-action@v3
-        with:
-          files: ${{ github.workspace }}/build/reports/kover/report.xml
-
-      # Run backend .NET tests
-      - name: Run Backend Tests
-        run: ./gradlew checkDotnet
+#  test:
+#    name: Test
+#    needs: [ build ]
+#    runs-on: ubuntu-latest
+#    steps:
+#
+#      # Check out current repository
+#      - name: Fetch Sources
+#        uses: actions/checkout@v4
+#
+#      # Set up Java environment for the next steps
+#      - name: Setup Java
+#        uses: actions/setup-java@v3
+#        with:
+#          distribution: zulu
+#          java-version: 17
+#
+#      # Setup Gradle
+#      - name: Setup Gradle
+#        uses: gradle/gradle-build-action@v2
+#        with:
+#          gradle-home-cache-cleanup: true
+#
+#      # Setup .NET environment for backend plugin build
+#      - name: Setup .NET SDK
+#        uses: actions/setup-dotnet@v3
+#        with:
+#          global-json-file: src/dotnet/global.json
+#
+#      # Run tests
+#      - name: Run Frontend Tests
+#        run: ./gradlew check
+#
+#      # Collect Tests Result of failed tests
+#      - name: Collect Frontend Tests Result
+#        if: ${{ failure() }}
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: tests-result
+#          path: ${{ github.workspace }}/build/reports/tests
+#      - name: Collect Frontend Tests Logs
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: tests-logs
+#          path: ${{ github.workspace }}/build/idea-sandbox/system-test/log
+#        if: ${{ always() }}
+#
+#      # Upload the Kover report to CodeCov
+#      - name: Upload Code Coverage Report
+#        uses: codecov/codecov-action@v3
+#        with:
+#          files: ${{ github.workspace }}/build/reports/kover/report.xml
+#
+#      # Run backend .NET tests
+#      - name: Run Backend Tests
+#        run: ./gradlew checkDotnet
 
   # Prepare a draft release for GitHub Releases page for the manual verification
   # If accepted and published, release workflow would be triggered
   releaseDraft:
     name: Release draft
     if: github.event_name != 'pull_request'
-    needs: [ build, test ]
+    needs: [ build ] #, test ]
     runs-on: ubuntu-latest
     permissions:
       contents: write
