Support Rider 2025.1 EAP 5

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,11 +6,11 @@ pluginNamespace = MSBuild.DevKit
 dotnetBuildConfiguration = Debug
 pluginRepositoryUrl = https://github.com/seclerp/rider-msbuild-devkit
 # SemVer format -> https://semver.org
-pluginVersion = 1.2.0
+pluginVersion = 1.2.1
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 243
-pluginUntilBuild = 243.*
+pluginSinceBuild = 251
+pluginUntilBuild = 251.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType = RD
@@ -18,10 +18,10 @@ platformType = RD
 #   Release:  2020.2
 #   Nightly:  2020.3-SNAPSHOT
 #   EAP:      2020.3-EAP2-SNAPSHOT
-platformVersion = 2024.3.2
+platformVersion = 2025.1-EAP5-SNAPSHOT
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
-gradleVersion = 8.3
+gradleVersion = 8.11
 
 # Opt-out flag for bundling Kotlin standard library -> https://jb.gg/intellij-platform-kotlin-stdlib
 kotlin.stdlib.default.dependency = false
