--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ platformType = RD
 #   Release:  2020.2
 #   Nightly:  2020.3-SNAPSHOT
 #   EAP:      2020.3-EAP2-SNAPSHOT
-platformVersion = 2025.1-EAP5-SNAPSHOT
+platformVersion = 2025.1-RC1-SNAPSHOT
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 8.13
