Prepare for the 1.2.3 release

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ pluginNamespace = MSBuild.DevKit
 dotnetBuildConfiguration = Debug
 pluginRepositoryUrl = https://github.com/seclerp/rider-msbuild-devkit
 # SemVer format -> https://semver.org
-pluginVersion = 1.2.2
+pluginVersion = 1.2.3
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 251
@@ -18,7 +18,7 @@ platformType = RD
 #   Release:  2020.2
 #   Nightly:  2020.3-SNAPSHOT
 #   EAP:      2020.3-EAP2-SNAPSHOT
-platformVersion = 2025.1-RC1-SNAPSHOT
+platformVersion = 2025.1
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 8.13
