--- a/gradle.properties
+++ b/gradle.properties
@@ -6,11 +6,10 @@ pluginNamespace = MSBuild.DevKit
 dotnetBuildConfiguration = Debug
 pluginRepositoryUrl = https://github.com/seclerp/rider-msbuild-devkit
 # SemVer format -> https://semver.org
-pluginVersion = 1.2.4
+pluginVersion = 1.2.5
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 252
-pluginUntilBuild = 252.*
+pluginSinceBuild = 251
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType = RD
@@ -18,7 +17,7 @@ platformType = RD
 #   Release:  2020.2
 #   Nightly:  2020.3-SNAPSHOT
 #   EAP:      2020.3-EAP2-SNAPSHOT
-platformVersion = 2025.2-EAP2-SNAPSHOT
+platformVersion = 2025.1
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 8.13
